--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,4 @@ LICENSE-fml.txt
 MinecraftForge-Credits.txt
 MinecraftForge-License.txt
 README.txt
-forge-1.7.2-10.12.1.1060-changelog.txt
+forge-*-changelog.txt
